--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
     <div class="container">
 
       <h2>About Learning Flask</h2>
-      <p>In Leanring Glask, you will build an app that let's you find new places around you. With this app
+      <p>In Learning Flask, you will be able to find new places around you. With this app
         you can discover new places you like and can visit</p>
       </div>
     </main>
