--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="section-device">
-        <img src="static/image/thing.jpg"> <!--image of map-->
+        <img src="static/image/yo.jpg"> <!--image of map-->
       </div>
 
       <div class="clearfix"></div>
