--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
       <div class="section-content">
         <h2>Discover places near you.</h2> <!--title-->
-        <a href="#" class="btn-primary">Sign up</a> <!--button1 & 2-->
+        <a href="{{ url_for('signup') }}" class="btn-primary">Sign up</a> <!--button1 & 2-->
         <a href="{{ url_for('about') }}" class="btn-secondary">Learn more</a>
       </div>
 
