--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,9 @@
 
       <div class="section-content">
         <h2>Discover places near you.</h2> <!--title-->
-        <a href="{{ url_for('signup') }}" class="btn-primary">Sign up</a> <!--button1 & 2-->
-        <a href="{{ url_for('about') }}" class="btn-secondary">Learn more</a>
+        <a href="{{ url_for('signup') }}" class="btn-primary">Sign up</a>
+        <a href="{{ url_for('login') }}" class="btn-secondary">Log in</a> <!--button1 & 2-->
+        <a href="{{ url_for('about') }}" class="btn-third">Learn more</a>
       </div>
 
       <div class="section-device">
