--- a/templates/about.html
+++ b/templates/about.html
@@ -4,9 +4,10 @@
   <main class="about-section">
     <div class="container">
 
-      <h2>About Learning Flask</h2>
-      <p>In Learning Flask, you will be able to find new places around you. With this app
-        you can discover new places you like and can visit</p>
+      <h2>About My Site</h2>
+      <p>This site contains a simple application that can identify places of interest within walking distance
+      of and location you input into the Application.
+      This site uses postgresql to store user data and only users can access the application</p>
       </div>
     </main>
 {% endblock %}
