--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 
       <h2>About My Site</h2>
       <p>This site contains a simple application that can identify places of interest within walking distance
-      of and location you input into the Application.
+      of any location you input into the Application.
       This site uses postgresql to store user data and only users can access the application</p>
       </div>
     </main>
