--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,9 @@
     </div>
 
     <div class="clearfix"></div>
+    <a href="{{ url_for('logout') }}" class="btn-secondary">Log out</a>
     </div>
+
   </main>
 
   <script>
