--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     <body>
       <header>
         <div class="container">
-          <h1 class="title">Bhavish's Site</h1> <!-- title of page-->
+          <a href="{{ url_for('index') }}"<h1 class="title"> <b>Bhavish's Site</b> </h1></a>  <!-- title of page-->
         </div>
       </header>
 
