--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <h2>Discover places near you.</h2> <!--title-->
         <a href="{{ url_for('signup') }}" class="btn-primary">Sign up</a>
         <a href="{{ url_for('login') }}" class="btn-secondary">Log in</a> <!--button1 & 2-->
-      <p>  <a href="{{ url_for('about') }}" class="btn-third">Learn more</a> </p>
+      <p>  <a href="{{ url_for('about') }}"> <b>Learn more</b> </a> </p>
       </div>
 
       <div class="section-device">
