--- a/templates/home.html
+++ b/templates/home.html
@@ -20,27 +20,25 @@
           <form method="POST" action="/home">
             {{ form.hidden_tag() }}
 
-          <div class="form-group">
-            {% if form.address.errors %}
-              {% for error in form.address.errors %}
-                <p class="error-message">{{ error }}</p>
-              {% endfor %}
-            {% endif %}
+            <div class="form-group">
+              {% if form.address.errors %}
+                {% for error in form.address.errors %}
+                  <p class="error-message">{{ error }}</p>
+                {% endfor %}
+              {% endif %}
 
-            {{ form.address(placeholder= "Explore nearby") }}
-          </div>
+              {{ form.address(placeholder="Explore nearby") }}
+            </div>
 
-          {{ form.submit(class="btn-primary") }}
-        </form>
+            {{ form.submit(class="btn-primary") }}
+          </form>
+        </div>
+
+        <div id="mapid"></div>
       </div>
 
-      <div id="map"></div>
+      <div class="clearfix"></div>
     </div>
-
-    <div class="clearfix"></div>
-    <a href="{{ url_for('logout') }}" class="btn-secondary">Log out</a>
-    </div>
-
   </main>
 
   <script>
@@ -65,4 +63,5 @@
         .addTo(map);
     }
   </script>
+
 {% endblock %}
