--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@ html, body, h1 {
 }
 
 body {
-  background-color: #bbf9ee;
+  background-color: #ffffff;
   font-family: 'Open Sans', sans-serif;
 }
 
