--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,7 +8,7 @@ html, body, h1 {
 }
 
 body {
-  background-color: #ffffff;
+  background-color: #f4f4f4;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -106,7 +106,7 @@ a {
  */
 
 header {
-  background-color: #e5e5e5;
+  background-color: #fff;
   padding: 25px 0;
 }
 
