--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,13 @@
 
 {% block content %}
   <main class="about-section">
-    <div class="container">
 
+    <div class="container">
+      <div class="topnav" id="myTopnav">
+        <a href="{{ url_for('login') }}">Login</a>
+        <a href="{{ url_for('signup') }}">Sign up</a>
+        <a class="active"  href="{{ url_for('about') }}">About</a>
+      </div>
       <h2>About My Site</h2>
       <p>This site contains a simple application that can identify places of interest within walking distance
       of any location you input into the Application.
