--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <!--template for most of my html files-->
+
   <html>
+  <style>
+  body {margin:0;}
+
+  .topnav {
+    overflow: hidden;
+    background-color: #f4f4f4;
+  }
+
+  .topnav a {
+    float: left;
+    color: #333;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .topnav a.active {
+    background-color: #3372df;
+    color: white;
+  }
+  </style>
     <head>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600'rel='stylesheet'>
         <link href="{{ url_for('static', filename='css/main.css') }}" rel ="stylesheet"> <!--flask function URL4 generates a url for the css file-->
