--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <main class = "container signup-section">
+  <div class="topnav" id="myTopnav">
+    <a href="{{ url_for('login') }}">Login</a>
+    <a class="active" href="{{ url_for('signup') }}">Sign up</a>
+    <a href="{{ url_for('about') }}">About</a>
+  </div>
   <div class ="section-content">
     <h2>Create an account</h2>
 
