--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,31 @@
     background-color: #3372df;
     color: white;
   }
+
+  .budget-tabs {
+    float: right;
+
+    width: 340px;
+
+  }
+  .budget-tabs .places {
+    margin-top: 300px;
+    padding-right: 20px;
+  }
+  .budget-tabs .name {
+
+    font-size: 20px;
+  }
+  .budget-tabs .price {
+    color: #6e6e6e;
+    font-size: 18px;
+    margin: 0;
+  }
+  .budget-tabs .negprice {
+    color: #e21f1f;
+    font-size: 18px;
+    margin: 0;
+  }
   </style>
     <head>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600'rel='stylesheet'>
