--- a/templates/budget.html
+++ b/templates/budget.html
@@ -31,7 +31,7 @@
             <p class="negprice">N/A</p>
             {% endif %}
             <a class="name"> Money for Attractions and Souvenirs:</a>
-            {% if left > 0 %}
+            {% if left >= 0 %}
             <p class="price">${{ left }}</p>
             {% else %}
             <p class="negprice">${{ left }}</p>
