--- a/templates/signup.html
+++ b/templates/signup.html
@@ -43,7 +43,10 @@
           <p class ="error-message">{{ error }}</p>
         {% endfor %}
       {% endif %}
-
+      {% if temp == 1 %}
+      <p class ="error-message">email already used</p>
+      {% endif %}
+      
       {{ form.email}}
     </div>
     <div class="form-group">
