--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
               {% endfor %}
             {% endif %}
 
-            {{ form.address(placeholder= "Explore nearby") }}
+            {{ form.address(placeholder= "Enter locations or addresses ie: Naperville") }}
           </div>
 
           {{ form.submit(class="btn-primary") }}
@@ -40,7 +40,7 @@
       </div>
 
       <div id="map"></div>
-    
+
     </div>
 
     <div class="clearfix"></div>
